make footer and fi x spacing issues

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -782,8 +782,8 @@ progress {
 .container-md,
 .container-sm {
   width: 100%;
-  padding-right: var(--bs-gutter-x, 0.75rem);
-  padding-left: var(--bs-gutter-x, 0.75rem);
+  padding-right: var(--bs-gutter-x, 1rem);
+  padding-left: var(--bs-gutter-x, 1rem);
   margin-right: auto;
   margin-left: auto;
 }
@@ -2847,7 +2847,14 @@ textarea.form-control-lg {
 .form-floating {
   position: relative;
 }
-
+.form-floating > .form-control {
+  padding: 34px 30px 24px 20px;
+  background-color: var(--right-overlay-color);
+  border-radius: 6px;
+  outline: none;
+  border: none;
+  color: var(--white);
+}
 .form-floating>.form-control,
 .form-floating>.form-select {
   height: calc(3.5rem + -11px);
@@ -2859,9 +2866,10 @@ textarea.form-control-lg {
   top: 0;
   left: 0;
   height: 100%;
-  padding: 13px 217px 13px 15px;
-  font-size: 0.85rem;
+  /* padding: 19px 217px 13px 15px; */
+  font-size: 1.0625rem;
   font-family: var(--font-family-nunito);
+  color: var(--white);
   font-style: normal;
   pointer-events: none;
   border: 1px solid transparent;
@@ -2887,15 +2895,15 @@ textarea.form-control-lg {
   color: transparent;
 }
 
-/* .form-floating > .form-control:not(:-moz-placeholder-shown) {
+.form-floating > .form-control:not(:-moz-placeholder-shown) {
   padding-top: 1.625rem;
   padding-bottom: 0.625rem;
-} */
+}
 .form-floating>.form-control:focus,
 .form-floating>.form-control:not(:placeholder-shown) {
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
   font-size: 14px;
-  padding-bottom: 0.625rem;
+  /* padding-bottom: 0.625rem; */
 }
 
 /* .form-floating > .form-control:-webkit-autofill {
@@ -3989,12 +3997,12 @@ fieldset:disabled .btn {
   display: block;
   width: 0;
   height: 1px;
-  background: var(--black);
+  background: var(--white);
   transition: width .3s;
 }
 
 .btn-link:hover::after {
-  width: 16%;
+  width: 100%;
   transition: width .3s;
 }
 
@@ -7482,6 +7490,9 @@ fieldset:disabled .btn {
 .top-0 {
   top: 0 !important;
 }
+.top-25 {
+  top: 25% !important;
+}
 
 .top-50 {
   top: 50% !important;
@@ -8680,6 +8691,9 @@ ul li a{
 .invisible {
   visibility: hidden !important;
 }
+/* .pb-sm-5 {
+  padding-bottom: 3rem !important;
+} */
 
 @media (min-width: 576px) {
   .float-sm-start {
